--- a/views/album/album.ejs
+++ b/views/album/album.ejs
@@ -3,7 +3,7 @@
     <div class="album">
         <div class="container-fluid">
           <div class="row row-cols-3 row-cols-sm-3 row-cols-md-6 g-4">
-            <% album.forEach(function(album){ %>
+            <% album.reverse().forEach(function(album){ %>
               <div class="col">
                 <div class="card shadows shadow-lg">
                   <div class="card-body">
