--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -97,6 +97,7 @@
 
 .card-body {
     padding: 0.5rem;
+    z-index: 1;
 }
 
 .songinfo--img,
@@ -118,7 +119,17 @@
     object-fit: cover;
     aspect-ratio: 1/1;
 }
-
+.icon--img{
+    height: 4.5vh;
+    padding: 0.1rem;
+    justify-content: center;
+    z-index: 10;
+}
+.icon--img:hover{
+    height: 4.5vh;
+    padding: 0;
+    justify-content: center;
+}
 .songimg {
     height: 4.5rem;
     object-fit: cover;
@@ -141,6 +152,7 @@
     font-weight: bold;
     margin: 0;
     white-space: nowrap;
+    display: block;
     width: inherit;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -168,6 +180,7 @@
     font-weight: bold;
     margin: 0;
     white-space: nowrap;
+    display: block;
     width: inherit;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -180,6 +193,11 @@
     text-decoration: none;
     font-size: 1.6vh;
     font-weight: bold;
+    display: block;
+    white-space: nowrap;
+    width: inherit;
+    overflow: hidden;
+    text-overflow: ellipsis;
     color: #B6B6B6;
 }
 
@@ -492,6 +510,28 @@ div.squarebox .t {
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
     color: rgb(0, 0, 0);
 }
+.star-color{
+    color: white;
+}
+.fa-star:hover{
+    color: rgb(56, 244, 250);
+}
+.fa-play:hover{
+    color: rgb(56, 244, 250);
+}
+.fa-pause:hover{
+    color: rgb(56, 244, 250);
+}
+.scrolluser{
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 600px;
+}
+
+.profile-body{
+    overflow-y: hidden;
+}
+
 @keyframes glow {
     from {
         text-shadow: 0 0 10px rgb(42, 226, 233), 0 0 20px rgb(42, 226, 233), 0 0 30px rgb(42, 226, 233), 0 0 40px rgb(42, 226, 233), 0 0 50px rgb(42, 226, 233);
