--- a/views/artist/artist-id.ejs
+++ b/views/artist/artist-id.ejs
@@ -85,13 +85,18 @@
                     <div class="card shadows shadow-lg">
                       <div class="card-body">
                         <a class="text-decoration-none" href="/album/<%= album._id %>">
-                          <img class="album--img" src="<%= album.image %>">
+                          <div>
+                            <img class="album--img" src="<%= album.image %>">
+                            <a href="#">
+                              <img class="icon--img float-end mt-1" src="/image/icons/play-button.png">
+                            </a>
+                          </div>
                           <p class="album--name text-white">
                             <%= album.name %>
                           </p>
-                          <p class="album--album d-inline">
+                          <a class="album--album d-block" href="/artist/<%= album.artist.id %>">
                             <%= artist.name %>
-                          </p>
+                          </a>
                         </a>
                       </div>
                     </div>
