--- a/views/artist/artist.ejs
+++ b/views/artist/artist.ejs
@@ -3,7 +3,7 @@
   <div class="album">
     <div class="container-fluid">
       <div class="row row-cols-3 row-cols-sm-3 row-cols-md-6 g-4">
-        <% artist.forEach(function(artist){ %>
+        <% artist.reverse().forEach(function(artist){ %>
           <div class="col">
             <div class="card shadows shadow-lg">
               <div class="card-body">
