--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/header.ejs") %>
-    <div class="col pt-4">
+    <div class="col py-4">
         <div class="container">
             <div class="row gutters">
                 <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
@@ -10,42 +10,108 @@
                                     <div class="user-avatar">
                                         <img src="<%= user.image %>">
                                     </div>
-                                    <h5 class="user-name"><%- user.firstname + ' ' + user.lastname %></h5>
-                                    <p class="username text-white m-0">
-                                        <i class="fa-solid fa-user"></i>
-                                        <%= user.username %>
-                                    </p>
+                                    <h5 class="user-name">
+                                        <%- user.firstname + ' ' + user.lastname %>
+                                    </h5>
                                     <p class="username text-white">
                                         <i class="fa-solid fa-envelope"></i>
                                         <a class="email" href="mailto: <%= user.email %>">
                                             <%= user.email %>
                                         </a>
                                     </p>
+                                    <span>
+                                        <i class="fa-solid fa-pen-to-square"></i>
+                                    </span>
+
+                      <!-- <button type="button" class="btn btn-sm btn-outline-info" data-bs-toggle="modal"
+                      data-bs-target="#edit">
+                      Edit
+                    </button>
+                    <div class="modal fade text-start" id="edit" tabindex="-1"
+                      aria-labelledby="exampleModalLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-xl">
+                        <div class="modal-content">
+                          <div class="modal-header bg-info">
+                            <h5 class="modal-title text-black" id="exampleModalLabel">Edit Song</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                              aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body text-black text-left">
+                            <form action="/user/<%= user._id %>?_method=PUT" method="POST"
+                              enctype="multipart/form-data">
+                              <div class="mb-3">
+                                <label class="form-label">Firstname</label>
+                                <input type="text" class="form-control" name="name" placeholder="<%= user.firstname %>"
+                                  value="<%= user.firstname %>">
+                              </div>
+                              <div class="mb-3">
+                                <label class="form-label">Lastname</label>
+                                <input type="text" class="form-control" name="name" placeholder="<%= user.lastname %>"
+                                  value="<%= user.lastname %>">
+                              </div>
+                              <div class="mb-3">
+                                <label class="form-label">Image</label>
+                                <img src="<%= user.image %>" height="100px" class="mb-3">
+                                <input type="file" class="form-control" name="image" accept='image/*'>
+                              </div>
+                              <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary">Save changes</button>
+                              </div>
+                            </form>
+                          </div>
+                        </div>
+                      </div>
+                    </div> -->
                                 </div>
-                               
+
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
                     <div class="card profilebg text-white">
-                        <div class="card-body">
+                        <div class="card-body scrolluser">
                             <div class="row gutters">
-                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                                <div class="col-xl-12 col-lg-6 col-md-12 col-sm-12 col-12">
                                     <h3 class="mb-2 text-white">Favourite Songs</h3>
+                                    <hr>
                                 </div>
                             </div>
                             <table class="table text-white">
                                 <thead>
                                 </thead>
                                 <tbody>
-                                  <tr>
-                                    <th scope="row"></th>
-                                    <td></td>
-                                    <td></td>
-                                  </tr>
+                                    <% user.song.forEach(function(user){ %>
+                                        <tr>
+                                            <td>
+                                                <img class="songimg-admin" src="<%= user.image %>">
+                                                <a class="py-2 mx-4 text-white text-decoration-none"
+                                                    href="/song/<%= user._id %>">
+                                                    <%= user.name %>
+                                                </a>
+                                            </td>
+                                            <td>
+                                                <div class="option my-4 mx-2">
+                                                    <a>
+                                                        <i class="fa-solid fa-play" id="playiconsearch"></i>
+                                                        <audio id="mysearch">
+                                                            <source src="<%= user.source %>" type="audio/mp3">
+                                                        </audio>
+                                                    </a>
+                                                    <form action="/user/unfavourite/<%= user.id %>" method="post"
+                                                        class="d-inline">
+                                                        <button class="mx-3 bg-transparent border-0">
+                                                            <i class="fa-solid fa-star mx-3 starbg"></i>
+                                                        </button>
+                                                    </form>
+                                                    <i class="fa-solid fa-circle-plus"></i>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <% }) %>
                                 </tbody>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
